# pybhatlib

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: publish.yml  tests.yml
Gauss Files and Comparison/Joint Model/: joint_r_dat.gss  r_dat_t_1000.csv
Gauss Files and Comparison/MDCEV Linear/: Estimation_LinearMDCEV.gss  Forecasting_LinMDCEV.gss  WorkshopData_ToursimExp_Vali.csv  fout1.xlsx
Gauss Files and Comparison/MDCEV Traditional/: Forecasting TradMDCEV.gss  Workshop_SCAG_Est.csv  Workshop_SCAG_Vali.csv  estimation_TradMDCEV.gss
Gauss Files and Comparison/MNL/: MNL_mode.gss  MNLcasenew.gss  binary.csv
Gauss Files and Comparison/MNP/: MNP_TRAVELMODE.gss  MNP_TRAVELMODE.py  MNP_TRAVELMODE_ATE.gss  MNP_TRAVELMODE_ATE.py  MNP_r_5.gss  MNP_r_5.py  MNP_vehpurchase.gss  MNP_vehpurchase.py  VehTypePurchase.csv
Gauss Files and Comparison/MORP/: Example_Dining.csv  Example_Walk.csv  MORP_DINING.gss  MORP_DINING.py  MORP_WALK.gss  MORP_WALK_ATE.gss  ate1.csv
Gauss Files and Comparison/bhatlib files/: gradients mvn.src  matgradient.src  vecup.src
bench/: bench_mixed.py
docs/: MORP_GAUSS_VERIFICATION.md
docs/plans/: GPU_IMPROVEMENT_PLAN.md
examples/: mdcev_lin.py  mdcev_trad.py  mnp_age45.py  mnp_ate_analysis.py  mnp_flexible_cov.py  mnp_iid.py  mnp_mixture.py  mnp_random_coefficients.py  morp_example.py
examples/data/: TRAVELMODE.csv  TRAVELMODE_synthetic.csv  WorkshopData_ToursimExp.csv  generate_travelmode.py  modeData.csv
examples/tutorials/: _convert_to_ipynb.py  t00_quickstart.ipynb  t01a_vectorization.ipynb  t01b_ldlt.ipynb  t01c_truncated_mvn.ipynb  t02a_gradcovcor.ipynb  t02b_spherical.ipynb  t02c_chain_rules.ipynb  t03a_mvncd_methods.ipynb  t03b_mvncd_gradients.ipynb  t03c_mvncd_rect.ipynb  t03d_univariate_cdfs.ipynb  t03e_bhat2018_table1.ipynb  t04a_mnp_iid.ipynb  t04b_mnp_flexible_cov.ipynb  t04c_mnp_heteronly.ipynb  t04d_mnp_random_coefficients.ipynb  t04e_mnp_mixture.ipynb  t04f_mnp_control_options.ipynb  t04g_mnp_forecasting.ipynb  t04h_bhatlib_table1.ipynb  t04i_bhat2018_table2.ipynb  t05b_morp_ate_predict.ipynb  t06a_backend_switching.ipynb  t06b_custom_specs.ipynb  t06c_gradient_verification.ipynb  t07a_mdcev_trad.ipynb  t07b_mdcev_lin.ipynb  t08a_mnl.ipynb
src/pybhatlib/: __init__.py
tests/: conftest.py  test_api_harmonization.py  test_reparam_extreme_inputs.py
tests/fixtures/: bhatlib_table2_targets.json
tests/test_backend/: test_array_api.py
tests/test_gradmvn/: test_bivariate_trunc.py  test_cond_trunc_grads.py  test_mvncd.py  test_mvncd_batch.py  test_mvncd_grad_analytic.py  test_mvncd_grad_ovus.py  test_mvncd_methods.py  test_mvncd_rect.py  test_mvncd_rect_inf_bounds.py  test_ordering.py  test_other_dists.py  test_trunc_grads.py
tests/test_matgradient/: test_gradcovcor.py  test_mat_grad_helpers.py  test_radial.py  test_spherical.py
tests/test_mixed/: test_copula.py  test_corr_chol.py  test_draws.py  test_engine_master.py  test_logistic.py  test_logitmod.py  test_mdcev_mixed_ate.py  test_mdcev_mixed_collapse.py  test_mdcev_mixed_gauss_parity.py  test_mdcev_mixed_kernel.py  test_mdcev_mixed_master.py  test_mixed_predict.py  test_mixmnl_ate.py  test_mixmnl_collapse.py  test_mixmnl_facade.py  test_mixmnl_gauss_parity.py  test_mixmnl_kernel.py  test_mnp_diff.py  test_mnp_spec.py  test_mnpkercp_ate.py  test_mnpkercp_corr_grad.py  test_mnpkercp_gauss_parity.py  test_mnpkercp_kernel.py  test_mnpkercp_master.py  test_mnpkercp_master_corr.py  test_morp_flex_ate.py  test_morp_flex_gauss_parity.py  test_morp_flex_kernel.py  test_morp_flex_master.py  test_morp_spec.py  test_panel.py  test_pdfrectn.py  test_rc_pipeline.py  test_spec.py  test_yj.py
tests/test_models/: test_ate_common.py  test_ate_from_params.py  test_mdcev.py  test_mdcev_scenarios.py  test_mnl.py  test_mnl_ate_from_params.py  test_mnp_active_mask_verbose.py  test_mnp_ate_scenarios.py  test_mnp_control.py  test_mnp_gauss_parity.py  test_mnp_grad.py  test_mnp_grad_mixture.py  test_mnp_mixture_ranvars.py  test_mnp_perobs_scores.py  test_mnp_se_options.py  test_mnp_table2_parity.py  test_mnp_unpar_se.py  test_model_facade.py  test_morp.py  test_morp_analytic_gradient.py  test_morp_gauss_parity.py  test_morp_per_outcome_spec.py  test_morp_scenarios.py  test_results_harmonization.py
tests/test_vecup/: test_ldlt.py  (+2 more)
(+220 files in other folders)
