[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pybhatlib"
version = "0.1.0"
description = "Python implementation of BHATLIB: matrix-based inference for advanced econometric models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Seongjin Choi", email = "choi@umn.edu" }]
keywords = [
    "discrete choice",
    "multinomial probit",
    "econometrics",
    "MVNCD",
    "covariance matrix",
    "transportation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
]

[project.urls]
Homepage = "https://github.com/UMN-Choi-Lab/pybhatlib"
Repository = "https://github.com/UMN-Choi-Lab/pybhatlib"
Documentation = "https://github.com/UMN-Choi-Lab/pybhatlib#readme"
Issues = "https://github.com/UMN-Choi-Lab/pybhatlib/issues"

[project.optional-dependencies]
torch = ["torch>=2.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]
all = ["pybhatlib[torch,dev]"]

[tool.hatch.build.targets.wheel]
packages = ["src/pybhatlib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "torch: tests requiring PyTorch backend",
    "slow: long-running integration tests",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
