[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "pybhatlib"
dynamic = ["version"]
description = "Python implementation of BHATLIB: matrix-based inference for advanced econometric models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Seongjin Choi", email = "choi@umn.edu" }]
keywords = [
    "discrete choice",
    "multinomial probit",
    "econometrics",
    "MVNCD",
    "covariance matrix",
    "transportation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "numba>=0.59",
]

[project.urls]
Homepage = "https://github.com/UMN-Choi-Lab/pybhatlib"
Repository = "https://github.com/UMN-Choi-Lab/pybhatlib"
Documentation = "https://github.com/UMN-Choi-Lab/pybhatlib#readme"
Issues = "https://github.com/UMN-Choi-Lab/pybhatlib/issues"
Changelog = "https://github.com/UMN-Choi-Lab/pybhatlib/blob/main/CHANGELOG.md"

[project.optional-dependencies]
torch = ["torch>=2.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]
all = ["pybhatlib[torch,dev]"]

# Single source of truth for the version: hatchling reads __version__ from
# this file, so the built METADATA and runtime pybhatlib.__version__ always agree.
[tool.hatch.version]
path = "src/pybhatlib/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pybhatlib"]

# Explicit allowlist for the sdist. Without this, hatchling's default sdist
# sweeps in every non-VCS-ignored file in the tree — including untracked local
# artifacts (e.g. the 282 MB proprietary GAUSS installer, experiments/). This
# allowlist guarantees only intended sources ship, regardless of what is lying
# around the working directory at build time.
[tool.hatch.build.targets.sdist]
include = [
    "src/pybhatlib",
    "tests",
    "examples",
    "README.md",
    "LICENSE",
    "CONTRIBUTING.md",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "torch: tests requiring PyTorch backend",
    "slow: long-running integration tests",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
